--- a/config.sample
+++ b/config.sample
@@ -39,6 +39,17 @@ LOGPATH="/opt/arm/logs/"
 # How long to let log files live before deleting (in days)
 LOGLIFE=1
 
+#############################
+## CIFS/Samba parameters ##
+#############################
+
+# CIFS settings are not used for ripping, but for Vagrant and Ansible installation.
+# CIFS_PATH is mounted to CIFS_MOUNT_POINT when the virtual machine boots.
+CIFS_PATH=""
+CIFS_MOUNT_POINT=""
+CIFS_USER=""
+CIFS_PASSWORD=""
+
 ########################
 ##  File Permissions  ##
 ########################
@@ -62,7 +73,7 @@ MINLENGTH="600"
 # analytical abilities such as the main-feature identification.  This method seems to offer success on bluray 
 # discs that fail in "mkv" mode. *** NOTE: MakeMKV only supports the backup method on BluRay discs.  Regular
 # DVD's will always default back to the "mkv" mode. If this is set to "backup" then you must also set HandBrake's MAINFEATURE to true. 
-RIPMETHOD="mkv" 
+RIPMETHOD="mkv"
 
 # MakeMKV Arguments
 # MakeMKV Profile used for controlling Audio Track Selection.
