Checkout dev, to keep it all together

--- a/arm-ansible-playbook.yml
+++ b/arm-ansible-playbook.yml
@@ -44,6 +44,7 @@
       git:
         repo: 'https://github.com/ahnooie/automatic-ripping-machine.git'
         dest: /opt/arm
+        version: dev
 
     - name: install pip dependencies
       pip:
